--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -14,6 +14,93 @@
  urldate = {2019-10-08}
 }
 
+@article{ArcLengthParametrization,
+author = {Wang, Hongling and Kearney, Joseph and Atkinson, Kendall},
+year = {2002},
+month = {01},
+pages = {},
+title = {Arc-length parameterized spline curves for real-time simulation}
+}
+
+@book{BezierAndBSplineTechniques,
+author = {Prautzsch, Hartmut and Boehm, Wolfgang and Paluszny, Marco},
+title = {Bezier and B-Spline Techniques},
+year = {2002},
+isbn = {3540437614},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg}
+}
+
+@article{IKSurvey,
+author = {Aristidou, A. and Lasenby, J. and Chrysanthou, Y. and Shamir, A.},
+title = {Inverse Kinematics Techniques in Computer Graphics: A Survey},
+journal = {Computer Graphics Forum},
+volume = {37},
+number = {6},
+pages = {35-58},
+keywords = {inverse kinematics, motion capture, biomechanical constraints, General and reference—Surveys and overviews; Computing methodologies—Animation},
+doi = {10.1111/cgf.13310},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.13310},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/cgf.13310},
+year = {2018}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Procedural Generation and PCA %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@book{PCA,
+ author = {Jolliffe, I.T.},
+ year = {2002},
+ title = {Principal Component Analysis},
+ edition = {2},
+ publisher = {Springer-Verlag},
+ address = {New York},
+ isbn = {0-387-95442-2}
+}
+
+@article{PCA_faces,
+ author = {Blanz, Volker and Vetter, Thomas},
+ year = {2002},
+ month = {09},
+ pages = {},
+ title = {A Morphable Model for the Synthesis of 3D Faces},
+ journal = {SIGGRAPH'99 Proceedings of the 26th annual conference on Computer graphics and interactive techniques},
+ doi = {10.1145/311535.311556}
+}
+
+@inproceedings{PCA_bodies,
+ author = {Seo, Hyewon and Thalmann, Nadia},
+ year = {2003},
+ month = {01},
+ pages = {19-26},
+ title = {An Automatic modeling of human bodies from sizing parameters},
+ journal = {Proceedings of the Symposium on Interactive 3D Graphics},
+ doi = {10.1145/641480.641487}
+}
+
+@thesis{ProceduralCharacterGeneration,
+ author = {Krogh, Robert},
+ title = {Procedural Character Generation},
+ subtitle = {Implementing Reference Fitting and Principal Components Analysis},
+ school = {Aalborg University},
+ year = {2007},
+ type = {Masterarbeit}
+}
+
+@thesis{GeneratingFacialTextures,
+ author = {Bach, Esben and Madsen, Andreas},
+ title = {Building and Generating Facial Textures using Eigen Faces},
+ school = {Harbin Institute of Technology und Linköping University},
+ year = {2016},
+ type = {Masterarbeit}
+}
+
+
+%%%%%%%%%%%%
+% Biologie %
+%%%%%%%%%%%%
+
 @article{homology,
     author = {Olsson, Lennart and Hoßfeld, Uwe},
     title = {Homology, Genes, and Evolutionary Innovation.— Günter P. Wagner.},
@@ -32,8 +119,9 @@
 @book{Vergleichende_Anatomie,
  author = {Hildebrand, Milton and Goslow, George E.},
  title = {Vergleichende und funktionelle Anatomie der Wirbeltiere},
- publisher = {Springer-Verlag Berlin Heidelberg New York},
+ publisher = {Springer-Verlag},
  year = {2004},
+ address = {Berlin, Heidelberg}
 }
 
 @book{DArcy_Thompson,
@@ -55,6 +143,8 @@
  author = {Westheide, Wilfried and Rieger, Reinhard},
  year = {2004},
  isbn = {3-8274-0307-3},
+ publisher = {Spektrum Akademischer Verlag},
+ address = {München}
 }
 
 @book{Zoologie25Wehner,
@@ -62,7 +152,9 @@
  author = {Wehner, Rüdiger and Gehring, Walter},
  edition = {25},
  year = {2013},
- isbn = {978-3-13-367425-6}
+ isbn = {978-3-13-367425-6},
+ publisher = {Georg Thieme Verlag},
+ address = {Stuttgart}
 }
 
 @book{Zoologie24Wehner,
@@ -70,7 +162,9 @@
  author = {Wehner, Rüdiger and Gehring, Walter},
  edition = {24},
  year = {2007},
- isbn = {978-3-13-367424-9}
+ isbn = {978-3-13-367424-9},
+  publisher = {Georg Thieme Verlag},
+ address = {Stuttgart}
 }
 
 @book{ZoologieHickman,
@@ -78,24 +172,9 @@
  author = {Hickman, Cleveland P. and Roberts, Larry S. and Larson, Allan and l'Anson, Helen and Eisenhour, David J.},
  edition = {13},
  year = {2008},
- isbn = {978-3-8273-7265-9}
-}
-
-@article{ArcLengthParametrization,
-author = {Wang, Hongling and Kearney, Joseph and Atkinson, Kendall},
-year = {2002},
-month = {01},
-pages = {},
-title = {Arc-length parameterized spline curves for real-time simulation}
-}
-
-@book{BezierAndBSplineTechniques,
-author = {Prautzsch, Hartmut and Boehm, Wolfgang and Paluszny, Marco},
-title = {Bezier and B-Spline Techniques},
-year = {2002},
-isbn = {3540437614},
-publisher = {Springer-Verlag},
-address = {Berlin, Heidelberg}
+ isbn = {978-3-8273-7265-9},
+ publisher = {Pearson Studium},
+ address = {München}
 }
 
 @article{MouseVertebrae,
@@ -107,19 +186,5 @@ title = {The Mouse Vertebrae: Changes in the Morphology of Mouse Vertebrae Exhib
 volume = {76},
 journal = {Okajimas folia anatomica Japonica},
 doi = {10.2535/ofaj1936.76.1_17}
-}
-
-@article{IKSurvey,
-author = {Aristidou, A. and Lasenby, J. and Chrysanthou, Y. and Shamir, A.},
-title = {Inverse Kinematics Techniques in Computer Graphics: A Survey},
-journal = {Computer Graphics Forum},
-volume = {37},
-number = {6},
-pages = {35-58},
-keywords = {inverse kinematics, motion capture, biomechanical constraints, General and reference—Surveys and overviews; Computing methodologies—Animation},
-doi = {10.1111/cgf.13310},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.13310},
-eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/cgf.13310},
-year = {2018}
 }
 
