Add more citable sources and section on procedural generation

--- a/latex/additional_features.tex
+++ b/latex/additional_features.tex
@@ -22,6 +22,8 @@ Das funktioniert natürlich nur über das implementierte Programm und liefert ke
  \item was genau wird variiert
  \item PCA Daten normalverteilt variieren (Verteilung bleibt Gauß, Erwartungswert bleibt gleich, Überlegungen dazu wie sie sich ändert durch Aufaddieren der Variation / Faltung mit anderem Gauß)
  \item Variation der Daten, die nicht von PCA abhängen, beschreiben; generische Algorithmen zitieren (auch hinzufügen und löschen oder ändern von Features um Variationen/Verbesserungen zu erzeugen)
+ \item create variations on existing models: simmons wilhelms van gelder 2002
+	\url{https://www.researchgate.net/publication/234776823_Model-based_reconstruction_for_creature_animation}
 \end{itemize}
 
 
