--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -15,34 +15,39 @@
 }
 
 @article{ArcLengthParametrization,
-author = {Wang, Hongling and Kearney, Joseph and Atkinson, Kendall},
-year = {2002},
-month = {01},
-pages = {},
-title = {Arc-length parameterized spline curves for real-time simulation}
+ author = {Wang, Hongling and Kearney, Joseph and Atkinson, Kendall},
+ year = {2002},
+ month = {01},
+ title = {Arc-length parameterized spline curves for real-time simulation},
+ url = {https://www.researchgate.net/publication/228718576_Arc-length_parameterized_spline_curves_for_real-time_simulation}
 }
 
-@book{BezierAndBSplineTechniques,
-author = {Prautzsch, Hartmut and Boehm, Wolfgang and Paluszny, Marco},
-title = {Bezier and B-Spline Techniques},
-year = {2002},
-isbn = {3540437614},
-publisher = {Springer-Verlag},
-address = {Berlin, Heidelberg}
+@book{BezierAndBSplineTechniques, 
+ author = {Prautzsch, Hartmut and Boehm, Wolfgang and Paluszny, Marco},
+ title = {Bezier and B-Spline Techniques},
+ year = {2002},
+ isbn = {3540437614},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg}
 }
 
 @article{IKSurvey,
-author = {Aristidou, A. and Lasenby, J. and Chrysanthou, Y. and Shamir, A.},
-title = {Inverse Kinematics Techniques in Computer Graphics: A Survey},
-journal = {Computer Graphics Forum},
-volume = {37},
-number = {6},
-pages = {35-58},
-keywords = {inverse kinematics, motion capture, biomechanical constraints, General and reference—Surveys and overviews; Computing methodologies—Animation},
-doi = {10.1111/cgf.13310},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.13310},
-eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/cgf.13310},
-year = {2018}
+ author = {Aristidou, A. and Lasenby, J. and Chrysanthou, Y. and Shamir, A.},
+  title = {Inverse Kinematics Techniques in Computer Graphics: A Survey},
+ journal = {Computer Graphics Forum},
+ volume = {37},
+ number = {6},
+ pages = {35-58},
+ url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.13310},
+ year = {2018}
+}
+
+@thesis{JonHudson,
+ author = {Hudson, Jon},
+ title = {Creature Generation using Genetic Algorithms and Auto-Rigging},
+ school = {Bournemouth University, National Centre for Computer Animation},
+ year = {2013},
+ type = {Masterarbeit}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -66,7 +71,7 @@ year = {2018}
  pages = {},
  title = {A Morphable Model for the Synthesis of 3D Faces},
  journal = {SIGGRAPH'99 Proceedings of the 26th annual conference on Computer graphics and interactive techniques},
- doi = {10.1145/311535.311556}
+ url = {https://dl.acm.org/doi/10.1145/311535.311556}
 }
 
 @inproceedings{PCA_bodies,
@@ -76,7 +81,7 @@ year = {2018}
  pages = {19-26},
  title = {An Automatic modeling of human bodies from sizing parameters},
  journal = {Proceedings of the Symposium on Interactive 3D Graphics},
- doi = {10.1145/641480.641487}
+ url = {https://dl.acm.org/doi/10.1145/641480.641487}
 }
 
 @thesis{ProceduralCharacterGeneration,
@@ -85,7 +90,8 @@ year = {2018}
  subtitle = {Implementing Reference Fitting and Principal Components Analysis},
  school = {Aalborg University},
  year = {2007},
- type = {Masterarbeit}
+ type = {Masterarbeit},
+ url = {https://projekter.aau.dk/projekter/en/studentthesis/procedural-character-generation-implementing-reference-fitting-and-principal-components-analysis(8a268f9e-a382-496b-8a94-a94fe6606d2e).html}
 }
 
 @thesis{GeneratingFacialTextures,
@@ -96,24 +102,53 @@ year = {2018}
  type = {Masterarbeit}
 }
 
+@inproceedings{PCGSurvey_videoGames,
+ author = {Barreto, Nuno and Roque, Licinio},
+ title = {A Survey of Procedural Content Generation tools in Video Game Creature Design},
+ booktitle = {Second Conference on Computation Communication Aesthetics and X},
+ year = {2014},
+ month = {06},
+ url = {https://www.researchgate.net/publication/298307183_A_Survey_of_Procedural_Content_Generation_tools_in_Video_Game_Creature_Design}
+}
+
+@inproceedings{PCGSurvey,
+ author = {Freiknecht, Jonas and Effelsberg, Wolfgang},
+ year = {2017},
+ title = {A Survey on the Procedural Generation of Virtual Worlds},
+ booktitle = {Multimodal Technologies and Interaction},
+ volume = {1},
+ series = {4},
+ note = {Artikel 27},
+ url = {https://doi.org/10.3390/mti1040027}
+}
+
+@online{SpeedTree,
+ title = {SpeedTree},
+ url = {https://store.speedtree.com/},
+ urldate = {2020-05-05}
+}
+
+@online{DemoScene,
+ title = {Demoszene},
+ url = {https://de.wikipedia.org/wiki/Demoszene},
+ urldate = {2020-05-05}
+}
 
 %%%%%%%%%%%%
 % Biologie %
 %%%%%%%%%%%%
 
 @article{homology,
-    author = {Olsson, Lennart and Hoßfeld, Uwe},
-    title = {Homology, Genes, and Evolutionary Innovation.— Günter P. Wagner.},
-    journal = {Systematic Biology},
-    volume = {64},
-    number = {2},
-    pages = {365-367},
-    year = {2014},
-    month = {12},
-    issn = {1063-5157},
-    doi = {10.1093/sysbio/syu127},
-    url = {https://doi.org/10.1093/sysbio/syu127},
-    eprint = {https://academic.oup.com/sysbio/article-pdf/64/2/365/24587311/syu127.pdf}
+ author = {Olsson, Lennart and Hoßfeld, Uwe},
+ title = {Homology, Genes, and Evolutionary Innovation.— Günter P. Wagner.},
+ journal = {Systematic Biology},
+ volume = {64},
+ number = {2},
+ pages = {365-367},
+ year = {2014},
+ month = {12},
+ issn = {1063-5157},
+ url = {https://doi.org/10.1093/sysbio/syu127},
 }
 
 @book{Vergleichende_Anatomie,
@@ -139,7 +174,8 @@ year = {2018}
 }
 
 @book{Spezielle_Zoologie,
- title = {Spezielle Zoologie. Teil 2: Wirbel- oder Schädeltiere},
+ title = {Spezielle Zoologie},
+ subtitle = {Teil 2: Wirbel- oder Schädeltiere},
  author = {Westheide, Wilfried and Rieger, Reinhard},
  year = {2004},
  isbn = {3-8274-0307-3},
@@ -163,7 +199,7 @@ year = {2018}
  edition = {24},
  year = {2007},
  isbn = {978-3-13-367424-9},
-  publisher = {Georg Thieme Verlag},
+ publisher = {Georg Thieme Verlag},
  address = {Stuttgart}
 }
 
@@ -177,14 +213,14 @@ year = {2018}
  address = {München}
 }
 
-@article{MouseVertebrae,
-author = {SHINOHARA, Harumichi},
-year = {1999},
-month = {06},
-pages = {17-31},
-title = {The Mouse Vertebrae: Changes in the Morphology of Mouse Vertebrae Exhibit Specific Patterns Over Limited Numbers of Vertebral Levels},
-volume = {76},
-journal = {Okajimas folia anatomica Japonica},
-doi = {10.2535/ofaj1936.76.1_17}
+@article{MouseVertebrae, 
+ author = {SHINOHARA, Harumichi},
+ year = {1999},
+ month = {06},
+ pages = {17-31},
+ title = {The Mouse Vertebrae: Changes in the Morphology of Mouse Vertebrae Exhibit Specific Patterns Over Limited Numbers of Vertebral  Levels},
+ volume = {76},
+ journal = {Okajimas folia anatomica Japonica},
+ url = {https://www.jstage.jst.go.jp/article/ofaj1936/76/1/76_17/_pdf﻿}
 }
 
