--- a/latex/implementation_detail.tex
+++ b/latex/implementation_detail.tex
@@ -184,7 +184,7 @@ Wie in Absatz \ref{leg_algo} zur Ausrichtung der Beine bereits beschrieben, tret
    In diesem Fall ist der Algorithmus natürlich nicht anwendbar. Das Bein wird dann einfach senkrecht nach unten ausgerichtet und mit einem Fuß versehen, der mit der Sohle auf dem Boden steht.
    
  \item % Gelenkoffsets
-   Bei kurzen Beinknochen kann es dazu kommen, dass der Oberschenkel nicht näher zum Boden kann, weil er schon aufliegt, aber Schienbein und Hand durch das Gelenkoffset (siehe Kapitel \ref{chapter:bone_models} zur Positionierung der Knochenmodelle) über dem Boden schweben und nicht näher zum Boden bewegt werden können.
+   Bei kurzen Beinknochen kann es dazu kommen, dass der Oberschenkel nicht näher zum Boden kann, weil er schon aufliegt, aber Schienbein und Hand durch das Gelenkoffset (siehe Abschnitt \ref{bone_models} zur Positionierung der Knochenmodelle) über dem Boden schweben und nicht näher zum Boden bewegt werden können.
    \todo{Beispiel Krokodil (siehe auch Screenshot)}
 \end{enumerate}
 
