--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -76,6 +76,7 @@
 \newcommand{\zb}{z.\,B.\ }
 \newcommand{\dash}{d.\,h.\ }
 \newcommand{\va}{v.\,a.\ }
+\newcommand{\ua}{u.\,a.\ }
 \newcommand{\bzw}{bzw.\ }
 \newcommand{\etc}{etc.\ }
 
