Section on biology - skeleton

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -130,8 +130,8 @@
 
 @online{DemoScene,
  title = {Demoszene},
- url = {https://de.wikipedia.org/wiki/Demoszene},
- urldate = {2020-05-05}
+ url = {https://www.demoscene.info/},
+ urldate = {2020-05-06}
 }
 
 %%%%%%%%%%%%
@@ -213,6 +213,27 @@
  address = {München}
 }
 
+@book{AllgemeineZoologie,
+ title = {Allgemeine Zoologie},
+ author = {Hadorn, Ernst and Wehner, Rüdiger},
+ edition = {21},
+ year = {1986},
+ isbn = {3-423-04061-0},
+ publisher = {Georg Thieme Verlag},
+ address = {Stuttgart}
+}
+
+@book{dtvBiologie,
+ title = {dtv-Atlas zur Biologie},
+ author = {Vogel, Günter and Angermann, Hartmut},
+ number = {Band II},
+ edition = {6},
+ year = {1968},
+ isbn = {3-423-03012-7},
+ publisher = {Deutscher Taschenbuch Verlag GmbH \& Co. KG},
+ address = {München}
+}
+
 @article{MouseVertebrae, 
  author = {SHINOHARA, Harumichi},
  year = {1999},
@@ -222,5 +243,21 @@
  volume = {76},
  journal = {Okajimas folia anatomica Japonica},
  url = {https://www.jstage.jst.go.jp/article/ofaj1936/76/1/76_17/_pdf﻿}
+}
+
+@online{WikipediaVogelskelett,
+ title = {Vogelskelett},
+ url = {https://de.wikipedia.org/wiki/Vogelskelett},
+ urldate = {2020-05-06}
+}
+
+@book{AnatomieKuenstler,
+  title={Handbuch der Anatomie der Tiere für Künstler},
+  author={Ellenberger, Wilhelm},
+  number={Bd. 1},
+  url={https://archive.org/details/bub_gb_4JFmAAAAMAAJ/page/n19/mode/2up},
+  year={1900},
+  publisher={Dietrichsche Verlagsbuchhandlung},
+  address = {Leipzig}
 }
 
